# Computer-Vision

./: .gitignore
introToOpenCV/: CMakeLists.txt  main.cpp
